--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,7 @@ stages:
 build:
     stage: build
     script: 
-        - ls /
-        - ls /ant
-        - ls /ant/bin
+        - ls /opt
         - ./ant/bin/ant -find compile.xml
     artifacts:
         paths:
