--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build:
     script: 
         - mkdir /ant
         - wget --output-document="/ant/ant.zip" http://archive.apache.org/dist/ant/ant-current-bin.zip
-        - unzip /ant/ant.zip -d /ant
+        - unzip -j /ant/ant.zip -d /ant
         - ./ant/bin/ant -find compile.xml
     artifacts:
         paths:
