--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,9 @@ stages:
 build:
     stage: build
     script: 
-        - mkdir /ant
-        - wget --output-document="/ant/ant.zip" http://archive.apache.org/dist/ant/ant-current-bin.zip
-        - unzip -j /ant/ant.zip -d /ant
+        - wget --output-document="/ant.zip" http://archive.apache.org/dist/ant/ant-current-bin.zip
+        - unzip /ant.zip -d /
+        - mv apache-ant* ant
         - ./ant/bin/ant -find compile.xml
     artifacts:
         paths:
